@@ -15,6 +15,7 @@ Version 1.4.6 - CVS
     parameter of webmail.php. This now uses a whitelist of acceptable
     values. [CVE-2006-0188]
   - Removed invalid STARTTLS check from configtest.php script.
+  - Added Georgian language support.
 
 Version 1.4.6 Release Candidate 1 - 10 December 2005
 ----------------------------------------------------
